--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <!-- semantic -->
-        <link rel="stylesheet" type="text/css" href="css/semantic/dist/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/semantic.min.css">
         <script
             src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-        <script src="css/semantic/dist/semantic.min.js"></script>
+        <script src="css/semantic-ui/dist/semantic.min.js"></script>
 
         <script src="js/angular/angular.js"></script>
     </head>
@@ -29,7 +29,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <h1>Hello world! This is HTML5 Boilerplate.</h1>
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
