--- a/login.html
+++ b/login.html
@@ -42,23 +42,16 @@
 
         <script src="js/angular/angular.js"></script>
     </head>
-    <body ng-app="app1">
+    <body ng-app="login">
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
         <!-- Login screen -->
-        <h1>Hello world! This is HTML5 Boilerplate.</h1>
-        <div ng-controller="test">
-            <span>Values:</span>
-            <input type="text" ng-model="first"/>
-            <input type="text" ng-model="second"/>
-            <button ng-click="update()">sum</button>
-            <br><br>
-            {{calculation}}
-        </div>
-        <!--scripts -->
 
+
+
+        <!--scripts -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
