--- a/index.html
+++ b/index.html
@@ -1,77 +1,96 @@
 <!doctype html>
 <html class="no-js" lang="en" ngapp="msmologin" ng-init="person = {name : 'murray'}">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/" />
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" type="text/css" href="css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <!-- semantic -->
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/semantic.min.css">
-        <script
-            src="https://code.jquery.com/jquery-3.1.1.min.js"
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <!-- semantic -->
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/semantic.min.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
             type="text/javascript"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/site.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/site.css">
 
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/container.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/grid.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/header.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/image.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/menu.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/container.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/grid.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/header.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/image.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/menu.css">
 
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/divider.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/segment.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/form.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/input.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/button.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/list.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/message.css">
-        <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/icon.css">
-        <script type="text/javascript" src="css/semantic-ui/dist/semantic.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/divider.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/segment.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/form.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/input.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/button.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/list.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/message.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic-ui/dist/components/icon.css">
+    <script type="text/javascript" src="css/semantic-ui/dist/semantic.min.js"></script>
 
-        <script src="js/angular/angular.js"></script>
-    </head>
-    <body ng-app="app1">
-        <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+    <script src="js/angular/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.js"></script>
+    <script src="js/main.routes.js"></script>
+    <script src="js/main.js"></script>
+</head>
+<body ng-app="portalrouter" ng-controller="mainController as main">
+    <!--[if lte IE 9]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <![endif]-->
+    <!-- Portal screen -->
 
-        <!-- Portal screen -->
-        <h1>Hello world! This is HTML5 Boilerplate.</h1>
-        <div ng-controller="test">
-            <span>Values:</span>
-            <input type="text" ng-model="first"/>
-            <input type="text" ng-model="second"/>
-            <button ng-click="update()">sum</button>
-            <br><br>
-            {{calculation}}
+    <div class="ui menu" style="background-color:#808080">
+        <a class="item" href="/">Home</a>
+        <a class="item" href="/portal/leaderboard">Leaderboards</a>
+        <a class="item" href="/portal/marketplace">Marketplace</a>
+        <a class="item" href="/portal/races">Races</a>
+        <a class="item" href="/portal/chat">Chat</a>
+        <a class="item" href="/portal/management">Management</a>
+        <div class="right menu">
+            <a class="item" onclick="gotoLogin()" name="account">Login</a>
+            <a class="item">Help</a>
         </div>
-        <!--scripts -->
+    </div>
+    <main>
+        <div ng-view></div>
+    </main>
+    <!--scripts -->
 
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <!--socket io client-->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+    <!--socket test-->
+    <script>
+        var socket = io();
+    </script>
 
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <script>
+        function gotoLogin() {
+            window.location = "Login";
+        }
+    </script>
 
-    </body>
+</body>
 </html>
