--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.js"></script>
     <script src="js/teamService.js"></script>
     <script src="js/userService.js"></script>
+    <script src="js/authService.js"></script>
     <script src="js/main.routes.js"></script>
     <script src="js/main.js"></script>
 </head>
