--- a/login.html
+++ b/login.html
@@ -40,6 +40,8 @@
     <script src="css/semantic-ui/dist/components/form.js"></script>
     <script src="css/semantic-ui/dist/components/transition.js"></script>
     <script src="js/angular/angular.js"></script>
+    <script src="js/authService.js"></script>
+    <script src="js/userService.js"></script>
     <script src="js/login.js"></script>
     <style type="text/css">
         body {
@@ -58,7 +60,7 @@
         }
     </style>
 </head>
-    <body ng-app="login">
+    <body ng-app="LoginController" ng-controller="login">
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
@@ -68,24 +70,25 @@
             <div class="column">
                 <h2 class="header">Log into your account</h2>
 
-                <form class="ui large form">
+                <form class="ui large form" ng-submit="loginuser()">
                     <div class="ui stacked segment">
 
                         <div class="field">
                             <div class="ui left icon input">
                                 <i class="user icon"></i>
-                                <input type="text" name="username" placeholder="enter your username" />
+                                <input type="text" name="username" ng-maxlength="10" ng-model="username" placeholder="enter your username" />
                             </div>
                         </div>
+
                         <div class="field">
                             <div class="ui left icon input">
                                 <i class="unlock icon"></i>
-                                <input type="password" name="password" placeholder="enter your password here" />
+                                <input type="password" name="password" ng-model="password" placeholder="enter your password here" />
                             </div>
                         </div>
-                        <div class="ui fluid large teal submit button">Login</div>
+
+                        <button type="submit" class="ui fluid large teal submit button">Login</button>
                     </div>
-                    <div class="ui error message"></div>
                 </form>
 
                 <div class="ui message">
