--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a class="item" href="/portal/chat">Chat</a>
         <a class="item" href="/portal/management">Management</a>
         <div class="right menu">
-            <a class="item" href="/portal/login" name="account">Login</a>
+            <a class="item" ng-click="doLogout()" >{{logstate}}</a>
             <a class="item">Help</a>
         </div>
     </div>
